init Extend duration